--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -44,7 +44,15 @@
     </style>
 </head>
 <body class="index-page">
-    {{ nav }}
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="/login"><i class="bi bi-box-arrow-in-right"></i> Login</a>
+                <a class="nav-link" href="/register"><i class="bi bi-person-plus"></i> Register</a>
+            </div>
+        </div>
+    </nav>
 
     <canvas id="bg-canvas"></canvas>
 
@@ -54,7 +62,7 @@
             <h2>ai.junder.uk</h2>
             <p>Advanced coding model,<br>powered by Devstral.</p>
             <p>No login required:</p>
-            <a href="/chat.html" class="btn btn-primary cta-button">Start guest chat</a>
+            <a href="/chat" class="btn btn-primary cta-button">Start guest chat</a>
         </div>
     </main>
 
@@ -104,14 +112,8 @@
         document.addEventListener('DOMContentLoaded', function() {
             console.log('🚀 ai.junder.uk - Devstral AI initialized');
             DevstralCommon.loadUser?.();
-            DevstralCommon.setupFeatureCardAnimations();
             DevstralCommon.setupAnalytics();
-            DevstralCommon.setupSmoothScrolling();
             DevstralCommon.setupKeyboardNavigation();
-
-            if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
-                DevstralCommon.setupPerformanceMonitoring();
-            }
         });
     </script>
 </body>
