--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -3,118 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ai.junder.uk - Devstral AI</title>
+    <title>ai.junder.uk</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/common.css">
-    <style>
-        body.index-page {
-            overflow-x: hidden;
-        }
-        canvas#bg-canvas {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            z-index: 10;
-            pointer-events: none;
-        }
-        .hero-section {
-            text-align: center;
-            padding: 120px 20px;
-            position: relative;
-            z-index: 20;
-        }
-        .hero-box {
-            display: inline-block;
-            padding: 20px 30px;
-            background: rgba(13, 110, 253, 0.1);
-            border-radius: 12px;
-            backdrop-filter: blur(4px);
-        }
-        .hero-section h1 {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-        }
-        .hero-section p {
-            font-size: 1.2rem;
-            margin-bottom: 20px;
-        }
-    </style>
+    <link href="/css/common.css" rel="stylesheet">
 </head>
-<body class="index-page">
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
-            <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/login"><i class="bi bi-box-arrow-in-right"></i> Login</a>
-                <a class="nav-link" href="/register"><i class="bi bi-person-plus"></i> Register</a>
-            </div>
-        </div>
-    </nav>
-
-    <canvas id="bg-canvas"></canvas>
-
+<body>
+    {{ nav }}
+    
     <main class="hero-section">
-        <div class="hero-box">
-            <h1><i class="bi bi-lightning-charge-fill"></i></h1>
-            <h2>ai.junder.uk</h2>
-            <p>Advanced coding model,<br>powered by Devstral.</p>
-            <p>No login required:</p>
-            <a href="/chat" class="btn btn-primary cta-button">Start guest chat</a>
+        <div class="hero-content">
+            <h1>ai.junder.uk</h1>
+            <p>Advanced coding model, powered by Devstral.</p>
+            <a href="/chat" class="btn btn-primary">Start Chatting</a>
         </div>
     </main>
-
-    <script src="/js/lib/jquery.min.js"></script>
-    <script src="/js/lib/bootstrap.min.js"></script>
-    <script src="/js/common.js"></script>
+    
     <script>
-        const canvas = document.getElementById('bg-canvas');
-        const ctx = canvas.getContext('2d');
-        let width = canvas.width = window.innerWidth;
-        let height = canvas.height = window.innerHeight;
-
-        let particles = [];
-        for (let i = 0; i < 75; i++) {
-            particles.push({
-                x: Math.random() * width,
-                y: Math.random() * height,
-                vx: (Math.random() - 0.5) * 0.5,
-                vy: (Math.random() - 0.5) * 0.5,
-                radius: Math.random() * 2 + 1
-            });
+        function logout() {
+            fetch('/api/auth/logout', { method: 'POST', credentials: 'include' })
+                .then(() => {
+                    localStorage.clear();
+                    window.location.href = '/';
+                });
         }
-
-        function animate() {
-            ctx.clearRect(0, 0, width, height);
-            for (let p of particles) {
-                p.x += p.vx;
-                p.y += p.vy;
-
-                if (p.x < 0 || p.x > width) p.vx *= -1;
-                if (p.y < 0 || p.y > height) p.vy *= -1;
-
-                ctx.beginPath();
-                ctx.arc(p.x, p.y, p.radius, 0, Math.PI * 2);
-                ctx.fillStyle = '#0d6efd';
-                ctx.fill();
-            }
-            requestAnimationFrame(animate);
-        }
-        animate();
-
-        window.addEventListener('resize', () => {
-            width = canvas.width = window.innerWidth;
-            height = canvas.height = window.innerHeight;
-        });
-
-        document.addEventListener('DOMContentLoaded', function() {
-            console.log('🚀 ai.junder.uk - Devstral AI initialized');
-            DevstralCommon.loadUser?.();
-            DevstralCommon.setupAnalytics();
-            DevstralCommon.setupKeyboardNavigation();
-        });
     </script>
 </body>
 </html>
