reverting to template depth 2

--- a/nginx/html/index.html
+++ b/nginx/html/index.html
@@ -8,7 +8,7 @@
     <link href="/css/common.css" rel="stylesheet">
 </head>
 <body>
-    {{ nav }}
+    {{ html.nav }}
     
     <main class="hero-section">
         <div class="hero-content">
