--- a/nginx/html/dash_approved.html
+++ b/nginx/html/dash_approved.html
@@ -1,7 +1,7 @@
 <div class="dashboard-container">
     <div class="dashboard-header">
         <h2><i class="bi bi-speedometer2"></i> Dashboard</h2>
-        <p>Welcome back, {{ username }}!</p>
+        <p>Welcome back, {{ redis.username }}!</p>
     </div>
     
     <div class="dashboard-content" id="dashboard-content">
