--- a/nginx/html/nav.html
+++ b/nginx/html/nav.html
@@ -3,10 +3,10 @@
         <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
         <div class="navbar-nav ms-auto">
             <!-- User display -->
-            <span class="navbar-text">{{ redis.username }}{{ content.user_badge }}</span>
+            <span class="navbar-text">{{ username }}{{ user_badge }}</span>
            
             <!-- Dash button -->
-            {{ content.dash_buttons }}
+            {{ dash_buttons }}
         </div>
     </div>
 </nav>
