--- a/nginx/html/rate_limit.html
+++ b/nginx/html/rate_limit.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="/js/common.js"></script>
+  <script src="/js/public.js"></script>
   <style>
     body { background-color: #111; color: #eee; }
   </style>
@@ -14,12 +14,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">Devstral</a>
     <div class="collapse navbar-collapse">
-      <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link" href="/chat">Chat</a></li>
-        <li class="nav-item"><a class="nav-link" href="/admin">Admin</a></li>
-      </ul>
       <span class="navbar-text me-3" id="navbar-username">Loading...</span>
-      <button class="btn btn-outline-light btn-sm" onclick="DevstralCommon.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
+      <button class="btn btn-outline-light btn-sm" onclick="PublicInterface.logout()"><i class="fas fa-sign-out-alt"></i> Logout</button>
     </div>
   </nav>
 
@@ -27,15 +23,5 @@
     <h2><i class="fas fa-exclamation-triangle"></i> Too many requests</h2>
     <p>Please wait a moment before trying again.</p>
   </div>
-
-  <script>
-  (async () => {
-    try {
-      const res = await apiGet("/api/auth/me");
-      if (res.success && res.username) document.getElementById("navbar-username").innerText = `Logged in as: ${res.username}`;
-      else document.getElementById("navbar-username").innerText = "Guest";
-    } catch { document.getElementById("navbar-username").innerText = "Guest"; }
-  })();
-  </script>
 </body>
 </html>
