--- a/nginx/dynamic_content/dash_approved.html
+++ b/nginx/dynamic_content/dash_approved.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page_title }}</title>
-    {{ css_files }}
 </head>
 <body>
     {{ nav }}
-    
     <main>
         {{ dashboard_content }}
     </main>
-    
-    {{ js_files }}
+    <script src="/js/is_public.js"></script>
+    <script src="is_guest.js"></script>
+    <script src="is_approved.js"></script>
 </body>
 </html>
