--- a/nginx/dynamic_content/429.html
+++ b/nginx/dynamic_content/429.html
@@ -6,7 +6,7 @@
     <title>Guest Slots Full</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/is_public.css">
     <style>
         .robot-icon {
             font-size: 4rem;
