--- a/nginx/dynamic_content/rate_limit.html
+++ b/nginx/dynamic_content/rate_limit.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="/js/public.js"></script>
+  <script src="/js/is_public.js"></script>
   <style>
     body { background-color: #111; color: #eee; }
   </style>
