--- a/nginx/dynamic_content/chat_guest.html
+++ b/nginx/dynamic_content/chat_guest.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page_title }}</title>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/common.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <style>
         /* Fixed chat styles */
         .chat-container {
@@ -201,6 +205,8 @@
             </div>
         </div>
     </main>
+    <script src="/js/lib/jquery.min.js"></script>
+    <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/is_public.js"></script>
     <script src="is_guest.js"></script>
 </body>
