--- a/nginx/dynamic_content/dash_approved.html
+++ b/nginx/dynamic_content/dash_approved.html
@@ -17,7 +17,7 @@
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/is_public.js"></script>
-    <script src="is_guest.js"></script>
-    <script src="is_approved.js"></script>
+    <script src="/js/is_guest.js"></script>
+    <script src="/js/is_approved.js"></script>
 </body>
 </html>
