--- a/nginx/dynamic_content/nav.html
+++ b/nginx/dynamic_content/nav.html
@@ -3,7 +3,7 @@
         <a class="navbar-brand" href="/"><i class="bi bi-lightning-charge-fill"></i> ai.junder.uk</a>
         <div class="navbar-nav ms-auto">
             <!-- User display -->
-            <span class="navbar-text">{{ username }}{{ user_badge }}</span>
+            <span class="navbar-text">{{ username }}</span>
            
             <!-- Dash button -->
             {{ dash_buttons }}
