--- a/nginx/dynamic_content/chat_guest.html
+++ b/nginx/dynamic_content/chat_guest.html
@@ -208,6 +208,6 @@
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/is_public.js"></script>
-    <script src="is_guest.js"></script>
+    <script src="/js/is_guest.js"></script>
 </body>
 </html>
