--- a/nginx/dynamic_content/dash_admin.html
+++ b/nginx/dynamic_content/dash_admin.html
@@ -17,8 +17,8 @@
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/is_public.js"></script>
-    <script src="is_guest.js"></script>
-    <script src="is_approved.js"></script>
-    <script src="is_admin.js"></script>
+    <script src="/js/is_guest.js"></script>
+    <script src="/js/is_approved.js"></script>
+    <script src="/js/is_admin.js"></script>
 </body>
 </html>
