--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -86,7 +86,7 @@
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/is_public.js"></script>
-    <script src="is_guest.js"></script>
+    <script src="/js/is_guest.js"></script>
     <script>
         // Neural net animation
         const canvas = document.getElementById('bg-canvas');
