--- a/nginx/dynamic_content/register.html
+++ b/nginx/dynamic_content/register.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page_title }}</title>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/common.css">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
     {{ nav }}
@@ -89,8 +93,6 @@
             </div>
         </div>
     </main>
-
-    {{ js_files }}
 
     <script>
         // Toggle password visibility
