--- a/nginx/dynamic_content/dash_pending.html
+++ b/nginx/dynamic_content/dash_pending.html
@@ -6,16 +6,15 @@
     <title>{{ page_title }}</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/common.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="/css/is_public.css">
 </head>
 <body>
     {{ nav }}
     <main>
         {{ dashboard_content }}
     </main>
-    <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
+    <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/is_public.js"></script>
     <script src="/js/is_guest.js"></script>
 </body>
