--- a/nginx/dynamic_content/register.html
+++ b/nginx/dynamic_content/register.html
@@ -6,8 +6,7 @@
     <title>{{ page_title }}</title>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/common.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="/css/is_public.css">
 </head>
 <body>
     {{ nav }}
