--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -115,20 +115,16 @@
             <h1 class="hero-title">{{ hero_title }}</h1>
             <p class="hero-subtitle">
                 {{ hero_subtitle }}<br>
-                Transform your ideas into code effortlessly. <br> <br> <br>
-                No login chat:
-            </p>
-            <div class="mt-4">
+                Transform your ideas into code. <br> <br>
+                No login chat: <br> <br>
                 <button class="btn btn-primary btn-lg me-3" onclick="handleChatStart()">
                     <i class="bi bi-chat-dots"></i> Start chat
-                </button>
-            </div>
-            <div class="mt-3">
+                </button> <br>
                 <small class="text-muted">
                     <i class="bi bi-info-circle"></i> 
                     Guest: 10 messages, 30 minutes • Account: Unlimited access
                 </small>
-            </div>
+            </p>
         </div>
     </main>
     <!-- Your existing scripts -->
