gd ole trusty getElementById

--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -117,7 +117,7 @@
                 {{ hero_subtitle }}<br>
                 Transform your ideas into code. <br> <br>
                 No login chat: <br> <br>
-                <button class="btn btn-primary btn-lg me-3" onclick="startGuestSession()">
+                <button class="btn btn-primary btn-lg me-3" id="chatters" onclick="startGuestSession()">
                     <i class="bi bi-chat-dots"></i> Start chat
                 </button> <br>
                 <small class="text-muted">
