SEMI WORKING -  No login: 10 messages, 30 minutes

--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -116,13 +116,12 @@
             <p class="hero-subtitle">
                 {{ hero_subtitle }}<br>
                 Transform your ideas into code. <br> <br>
-                No login chat: <br> <br>
                 <button class="btn btn-primary btn-lg me-3" id="chatters" onclick="startGuestSession()">
                     <i class="bi bi-chat-dots"></i> Start chat
                 </button> <br>
                 <small class="text-muted">
                     <i class="bi bi-info-circle"></i> 
-                    Guest: 10 messages, 30 minutes • Account: Unlimited access
+                    No login: 10 messages, 30 minutes
                 </small>
             </p>
         </div>
