--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -18,7 +18,7 @@
             <p class="hero-subtitle">
                 {{ hero_subtitle }}<br>
                 Transform your ideas into code. <br> <br>
-                <button class="btn btn-primary btn-lg me-3" id="chatters">
+                <button class="btn btn-primary btn-lg me-3" id="chatters" onclick="startGuestSession()">
                     <i class="bi bi-chat-dots"></i> Start chat
                 </button> <br>
                 <small class="text-muted">
@@ -33,8 +33,6 @@
     <script src="/js/lib/jquery.min.js"></script>
     <script src="/js/is_public.js"></script>
     <script src="/js/is_guest.js"></script>
-    <script src="/js/is_aprroved.js"></script>
-    <script src="/js/is_admin.js"></script>
     <script>
         // Neural net animation
         const canvas = document.getElementById('bg-canvas');
