auth.check alr exists

--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -14,9 +14,9 @@
     <main class="hero-section">
         <canvas id="bg-canvas"></canvas>
         <div class="hero-content">
-            <h1 class="hero-title">{{ hero_title }}</h1>
+            <h1 class="hero-title">ai.junder.uk</h1>
             <p class="hero-subtitle">
-                {{ hero_subtitle }}<br>
+                Advanced coding model, powered by Devstral.<br>
                 Transform your ideas into code. <br> <br>
                 <button class="btn btn-primary btn-lg me-3" id="chatters" onclick="startGuestSession()">
                     <i class="bi bi-chat-dots"></i> Start chat
@@ -28,11 +28,11 @@
             </p>
         </div>
     </main>
-    <!-- Your existing scripts -->
+    <!-- Scripts -->
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/jquery.min.js"></script>
-    <script src="/js/is_public.js"></script>
-    <script src="/js/is_guest.js"></script>
+    <script src="/js/is_shared.js"></script>
+    <script src="/js/is_none.js"></script>
     <script>
         // Neural net animation
         const canvas = document.getElementById('bg-canvas');
