--- a/nginx/dynamic_content/429.html
+++ b/nginx/dynamic_content/429.html
@@ -1,61 +1,26 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guest Slots Full</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/is_public.css">
-    <style>
-        .robot-icon {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            opacity: 0.7;
-            animation: float 3s ease-in-out infinite;
-        }
-        @keyframes float {
-            0%, 100% { transform: translateY(0px); }
-            50% { transform: translateY(-10px); }
-        }
-    </style>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <i class="bi bi-robot"></i> Devstral AI
-            </a>
-            <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/">
-                    <i class="bi bi-house"></i> Home
-                </a>
-            </div>
-        </div>
-    </nav>
-
-    <main class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
-                <div class="error-page-container">
-                    <div class="robot-icon">🤖</div>
-                    <div class="error-code">429</div>
-                    <h1 class="error-message">Guest Slots Are Full</h1>
-                    <p class="error-description">
-                        All guest slots are currently occupied. <br>
-                        Please try again in a few minutes.
-                    </p>
-                    <div class="error-actions">
-                        <a href="/" class="error-btn">
-                            🏠 Go Home
-                        </a>
-                        <button class="error-btn secondary" onclick="history.back()">
-                            ← Go Back
-                        </button>
-                    </div>
+<!-- 429.html - Rate limit page using base template -->
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <div class="error-page-container">
+                <div class="robot-icon" style="font-size: 4rem; margin-bottom: 1rem; opacity: 0.7; animation: float 3s ease-in-out infinite;">🤖</div>
+                <div class="error-code" style="font-size: 8rem; font-weight: bold; color: #ffc107;">429</div>
+                <h1 class="error-message">Guest Slots Are Full</h1>
+                <p class="error-description">
+                    All guest slots are currently occupied. <br>
+                    Please try again in a few minutes.
+                </p>
+                <div class="error-actions">
+                    <a href="/" class="btn btn-primary me-2">🏠 Go Home</a>
+                    <a href="/register" class="btn btn-success">Create Account</a>
                 </div>
             </div>
         </div>
-    </main>
-</body>
-</html>
+    </div>
+</div>
+<style>
+    @keyframes float {
+        0%, 100% { transform: translateY(0px); }
+        50% { transform: translateY(-10px); }
+    }
+</style>
