--- a/nginx/dynamic_content/50x.html
+++ b/nginx/dynamic_content/50x.html
@@ -1,57 +1,20 @@
-<!-- 50x.html -->
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Server Error</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/is_public.css">
-    <style>
-        .robot-icon {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            opacity: 0.7;
-        }
-    </style>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">
-                <i class="bi bi-robot"></i> Devstral AI
-            </a>
-            <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="/">
-                    <i class="bi bi-house"></i> Home
-                </a>
-            </div>
-        </div>
-    </nav>
-
-    <main class="container-fluid">
-        <div class="row justify-content-center">
-            <div class="col-md-6 text-center">
-                <div class="error-page-container">
-                    <div class="robot-icon">⚠️</div>
-                    <div class="error-code">500</div>
-                    <h1 class="error-message">Server Error</h1>
-                    <p class="error-description">
-                        Something went wrong on our servers. We're working to fix this issue.
-                        Please try again in a few moments.
-                    </p>
-                    <div class="error-actions">
-                        <a href="/" class="error-btn">
-                            🏠 Go Home
-                        </a>
-                        <button class="error-btn secondary" onclick="window.location.reload()">
-                            🔄 Try Again
-                        </button>
-                    </div>
+<!-- 50x.html - Server error page using base template -->
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+            <div class="error-page-container">
+                <div class="robot-icon" style="font-size: 4rem; margin-bottom: 1rem; opacity: 0.7;">⚠️</div>
+                <div class="error-code" style="font-size: 8rem; font-weight: bold; color: #dc3545;">500</div>
+                <h1 class="error-message">Server Error</h1>
+                <p class="error-description">
+                    Something went wrong on our servers. We're working to fix this issue.
+                    Please try again in a few moments.
+                </p>
+                <div class="error-actions">
+                    <a href="/" class="btn btn-primary me-2">🏠 Go Home</a>
+                    <button class="btn btn-secondary" onclick="window.location.reload()">🔄 Try Again</button>
                 </div>
             </div>
         </div>
-    </main>
-</body>
-</html>
+    </div>
+</div>
