--- a/nginx/dynamic_content/login.html
+++ b/nginx/dynamic_content/login.html
@@ -1,91 +1,76 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page_title }}</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/is_public.css">
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-</head>
-<body>
-    {{ nav }}
-
-    <main class="auth-container">
-        <div class="auth-card">
-            <div class="auth-header">
-                <h2><i class="bi bi-box-arrow-in-right text-primary"></i> {{ auth_title }}</h2>
-                <p>{{ auth_subtitle }}</p>
-            </div>
-
-            <div id="alert-container"></div>
-
-            <form id="login-form">
-                <div class="mb-3">
-                    <label for="username" class="form-label">
-                        <i class="bi bi-person"></i> Username
-                    </label>
-                    <input 
-                        type="text" 
-                        class="form-control" 
-                        id="username" 
-                        name="username" 
-                        placeholder="Enter your username" 
-                        required 
-                        autocomplete="username">
-                </div>
-
-                <div class="mb-3">
-                    <label for="password" class="form-label">
-                        <i class="bi bi-lock"></i> Password
-                    </label>
-                    <div class="input-group">
-                        <input 
-                            type="password" 
-                            class="form-control" 
-                            id="password" 
-                            name="password" 
-                            placeholder="Enter your password" 
-                            required 
-                            autocomplete="current-password">
-                        <button 
-                            class="btn btn-outline-secondary" 
-                            type="button" 
-                            id="toggle-password">
-                            <i class="bi bi-eye"></i>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="remember-me">
-                    <label class="form-check-label" for="remember-me">
-                        Remember me
-                    </label>
-                </div>
-
-                <button type="submit" class="btn btn-primary w-100 mb-3" id="login-btn">
-                    <i class="bi bi-box-arrow-in-right"></i> Sign In
-                </button>
-            </form>
-
-            <div class="text-center">
-                <p class="text-muted">Don't have an account?</p>
-                <a href="/register" class="btn btn-outline-primary">
-                    <i class="bi bi-person-plus"></i> Create Account
-                </a>
-            </div>
-
-            <hr class="my-4">
-
-            <div class="text-center">
-                <small class="text-muted">
-                    <i class="bi bi-shield-check"></i> 
-                    Secure login powered by ai.junder.uk
-                </small>
-            </div>
+<!-- login.html - Login page content -->
+<div class="auth-container">
+    <div class="auth-card">
+        <div class="auth-header">
+            <h2><i class="bi bi-box-arrow-in-right text-primary"></i> {{ auth_title }}</h2>
+            <p>{{ auth_subtitle }}</p>
         </div>
-    </main>
-</body>
-</html>
+
+        <div id="alert-container"></div>
+
+        <form id="login-form">
+            <div class="mb-3">
+                <label for="username" class="form-label">
+                    <i class="bi bi-person"></i> Username
+                </label>
+                <input 
+                    type="text" 
+                    class="form-control" 
+                    id="username" 
+                    name="username" 
+                    placeholder="Enter your username" 
+                    required 
+                    autocomplete="username">
+            </div>
+
+            <div class="mb-3">
+                <label for="password" class="form-label">
+                    <i class="bi bi-lock"></i> Password
+                </label>
+                <div class="input-group">
+                    <input 
+                        type="password" 
+                        class="form-control" 
+                        id="password" 
+                        name="password" 
+                        placeholder="Enter your password" 
+                        required 
+                        autocomplete="current-password">
+                    <button 
+                        class="btn btn-outline-secondary" 
+                        type="button" 
+                        id="toggle-password">
+                        <i class="bi bi-eye"></i>
+                    </button>
+                </div>
+            </div>
+
+            <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="remember-me">
+                <label class="form-check-label" for="remember-me">
+                    Remember me
+                </label>
+            </div>
+
+            <button type="submit" class="btn btn-primary w-100 mb-3" id="login-btn">
+                <i class="bi bi-box-arrow-in-right"></i> Sign In
+            </button>
+        </form>
+
+        <div class="text-center">
+            <p class="text-muted">Don't have an account?</p>
+            <a href="/register" class="btn btn-outline-primary">
+                <i class="bi bi-person-plus"></i> Create Account
+            </a>
+        </div>
+
+        <hr class="my-4">
+
+        <div class="text-center">
+            <small class="text-muted">
+                <i class="bi bi-shield-check"></i> 
+                Secure login powered by ai.junder.uk
+            </small>
+        </div>
+    </div>
+</div>
