--- a/nginx/dynamic_content/register.html
+++ b/nginx/dynamic_content/register.html
@@ -1,164 +1,92 @@
-<!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ page_title }}</title>
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/is_public.css">
-</head>
-<body>
-    {{ nav }}
-    <main class="auth-container">
-        <div class="auth-card">
-            <div class="auth-header">
-                <h2><i class="bi bi-person-plus text-success"></i> {{ auth_title }}</h2>
-                <p>{{ auth_subtitle }}</p>
+<!-- register.html - Register page content -->
+<div class="auth-container">
+    <div class="auth-card">
+        <div class="auth-header">
+            <h2><i class="bi bi-person-plus text-primary"></i> {{ auth_title }}</h2>
+            <p>{{ auth_subtitle }}</p>
+        </div>
+
+        <div id="alert-container"></div>
+
+        <form id="register-form">
+            <div class="mb-3">
+                <label for="username" class="form-label">
+                    <i class="bi bi-person"></i> Username
+                </label>
+                <input 
+                    type="text" 
+                    class="form-control" 
+                    id="username" 
+                    name="username" 
+                    placeholder="Choose a username" 
+                    required 
+                    autocomplete="username">
             </div>
 
-            <div id="alert-container"></div>
-
-            <form id="register-form">
-                <div class="mb-3">
-                    <label for="username" class="form-label">
-                        <i class="bi bi-person"></i> Username
-                    </label>
-                    <input 
-                        type="text" 
-                        class="form-control" 
-                        id="username" 
-                        name="username" 
-                        placeholder="Choose a username" 
-                        required 
-                        autocomplete="username">
-                </div>
-
-                <div class="mb-3">
-                    <label for="password" class="form-label">
-                        <i class="bi bi-lock"></i> Password
-                    </label>
-                    <div class="input-group">
-                        <input 
-                            type="password" 
-                            class="form-control" 
-                            id="password" 
-                            name="password" 
-                            placeholder="Create a password" 
-                            required 
-                            autocomplete="new-password">
-                        <button 
-                            class="btn btn-outline-secondary" 
-                            type="button" 
-                            id="toggle-password">
-                            <i class="bi bi-eye"></i>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="confirm-password" class="form-label">
-                        <i class="bi bi-check2-square"></i> Confirm Password
-                    </label>
+            <div class="mb-3">
+                <label for="password" class="form-label">
+                    <i class="bi bi-lock"></i> Password
+                </label>
+                <div class="input-group">
                     <input 
                         type="password" 
                         class="form-control" 
-                        id="confirm-password" 
-                        name="confirm-password" 
-                        placeholder="Confirm your password" 
+                        id="password" 
+                        name="password" 
+                        placeholder="Create a password" 
                         required 
                         autocomplete="new-password">
+                    <button 
+                        class="btn btn-outline-secondary" 
+                        type="button" 
+                        id="toggle-password">
+                        <i class="bi bi-eye"></i>
+                    </button>
                 </div>
-
-                <button type="submit" class="btn btn-success w-100 mb-3" id="register-btn">
-                    <i class="bi bi-person-plus"></i> Create Account
-                </button>
-            </form>
-
-            <div class="text-center">
-                <p class="text-muted">Already have an account?</p>
-                <a href="/login" class="btn btn-outline-secondary">
-                    <i class="bi bi-box-arrow-in-right"></i> Sign In
-                </a>
             </div>
 
-            <hr class="my-4">
-
-            <div class="text-center">
-                <small class="text-muted">
-                    <i class="bi bi-shield-check"></i> 
-                    Registration powered by ai.junder.uk
-                </small>
+            <div class="mb-3">
+                <label for="confirm-password" class="form-label">
+                    <i class="bi bi-check2-square"></i> Confirm Password
+                </label>
+                <input 
+                    type="password" 
+                    class="form-control" 
+                    id="confirm-password" 
+                    name="confirm-password" 
+                    placeholder="Confirm your password" 
+                    required 
+                    autocomplete="new-password">
             </div>
+
+            <div class="mb-3">
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="terms" required>
+                    <label class="form-check-label" for="terms">
+                        I agree to the Terms of Service
+                    </label>
+                </div>
+            </div>
+
+            <button type="submit" class="btn btn-primary w-100 mb-3" id="register-btn">
+                <i class="bi bi-person-plus"></i> Create Account
+            </button>
+        </form>
+
+        <div class="text-center">
+            <p class="text-muted">Already have an account?</p>
+            <a href="/login" class="btn btn-outline-primary">
+                <i class="bi bi-box-arrow-in-right"></i> Sign In
+            </a>
         </div>
-    </main>
 
-    <script>
-        // Toggle password visibility
-        document.getElementById("toggle-password").addEventListener("click", function () {
-            const pwField = document.getElementById("password");
-            const icon = this.querySelector("i");
-            if (pwField.type === "password") {
-                pwField.type = "text";
-                icon.classList.remove("bi-eye");
-                icon.classList.add("bi-eye-slash");
-            } else {
-                pwField.type = "password";
-                icon.classList.remove("bi-eye-slash");
-                icon.classList.add("bi-eye");
-            }
-        });
+        <hr class="my-4">
 
-        // Register form submit handler
-        document.getElementById("register-form").addEventListener("submit", async function (e) {
-            e.preventDefault();
-
-            const username = document.getElementById("username").value.trim();
-            const password = document.getElementById("password").value.trim();
-            const confirmPassword = document.getElementById("confirm-password").value.trim();
-            const alertContainer = document.getElementById("alert-container");
-
-            alertContainer.innerHTML = "";
-
-            if (password !== confirmPassword) {
-                showAlert("Passwords do not match.", "danger");
-                return;
-            }
-
-            try {
-                const res = await fetch("/api/register", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ username, password })
-                });
-
-                const data = await res.json();
-
-                if (data.success) {
-                    showAlert(data.message || "Registration successful! Pending approval.", "success");
-                    if (data.redirect) {
-                        setTimeout(() => {
-                            window.location.href = data.redirect;
-                        }, 3000);
-                    }
-                } else {
-                    showAlert(data.message || "Registration failed.", "danger");
-                }
-            } catch (err) {
-                showAlert("An unexpected error occurred.", "danger");
-                console.error(err);
-            }
-        });
-
-        function showAlert(message, type = "info") {
-            const alertContainer = document.getElementById("alert-container");
-            alertContainer.innerHTML = `
-                <div class="alert alert-${type} alert-dismissible fade show" role="alert">
-                    ${message}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            `;
-        }
-    </script>
-</body>
-</html>
+        <div class="text-center">
+            <small class="text-muted">
+                <i class="bi bi-shield-check"></i> 
+                Join the ai.junder.uk community
+            </small>
+        </div>
+    </div>
+</div>
