--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -6,9 +6,7 @@
         <p class="hero-subtitle">
             Advanced coding model, powered by Devstral.<br>
             Transform your ideas into code. <br> <br>
-            <button class="btn btn-primary btn-lg me-3" id="chatters" data-action="start-guest-session">
-                <i class="bi bi-chat-dots"></i> Start chat
-            </button> <br>
+            {{ start_chat_button }} <br>
             <small class="text-muted">
                 <i class="bi bi-info-circle"></i> 
                 No login: 10 messages, 10 minutes
