external sse formatter pre marked js

--- a/nginx/dynamic_content/base.html
+++ b/nginx/dynamic_content/base.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/css/is_public.css">
     
     <!-- External libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/eventsource-parser@1.1.2/dist/index.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
