--- a/nginx/dynamic_content/base.html
+++ b/nginx/dynamic_content/base.html
@@ -39,5 +39,7 @@
     </nav>
     <!-- Main content area -->
     {{ content }}
+    <!-- Dynamic JavaScript from cache -->
+    {{ js }}
 </body>
 </html>
