--- a/nginx/dynamic_content/base.html
+++ b/nginx/dynamic_content/base.html
@@ -21,7 +21,7 @@
     {{ css_error }}
     
     <!-- Combined CSS fallback for non-individual loading -->
-    <!-- {{ css }} -->
+    <!--  css  -->
     
     <!-- External libraries -->
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
