--- a/nginx/dynamic_content/index.html
+++ b/nginx/dynamic_content/index.html
@@ -5,11 +5,11 @@
         <p class="hero-subtitle">
             Advanced coding model, powered by Devstral.<br>
             Transform your ideas into code. <br> <br>
-            {{ start_chat_button }} <br>
             <small class="text-muted">
                 <i class="bi bi-info-circle"></i> 
-                No login: 10 messages, 10 minutes
+                No login:
             </small>
+            {{ start_chat_button }} <br>
         </p>
     </div>
 </div>
